force-app/main/default/objects/Pre_Delivery_Inspection_Item__c/Pre_Delivery_Inspection_Item__c.object-meta.xml
<CustomObject>
    <label>Pre Delivery Inspection Item</label>
    <nameField>
        <displayFormat>PDI-Item-{0000}</displayFormat>
        <label>Pre Delivery Inspection Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Delivery Inspection Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>