force-app/main/default/objects/Pre_Delivery_Inspection_Item__c/fields/Asset_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Asset_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Milestone</label>
    <referenceTo>AssetMilestone</referenceTo>
    <relationshipLabel>Pre Delivery Inspection Items</relationshipLabel>
    <relationshipName>Pre_Delivery_Inspection_Items</relationshipName>
    <type>Lookup</type>
</CustomField>