force-app/main/default/objects/Pre_Delivery_Inspection_Item__c/fields/Pre_Delivery_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Delivery Inspection</label>
    <referenceTo>Pre_Delivery_Inspection__c</referenceTo>
    <relationshipLabel>Pre Delivery Inspection Items</relationshipLabel>
    <relationshipName>Pre_Delivery_Inspection_Items</relationshipName>
    <type>Lookup</type>
</CustomField>